# april

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  aclocal.m4  april-3-7-06.tgz  april.spec.in  autogen.sh  configure.in  mkinstalldirs  rpm.Make
April/Alex/: .cvsignore  Makefile.am  alex  alex.ap  alex.in  genapril.af  genapril.ap  gendfa.af  gendfa.ap  genregexp.af  genregexp.ap  ident.alx  regexp.ah  test.alx  test.ap  tester.ap  token.ah
April/Alex/CVS/: Entries  Repository
April/Alex/Doc/: .cvsignore  Makefile.am  alex.texi  gpl.texi  grammar.texi  intro.texi  nfa.eps  nfa.fig  psfig.tex  theory.texi  token.texi  using.texi
April/Apg/: .cvsignore  Makefile.am  apg  apg.ah  apg.ap  apg.apg  apg.in  apg.output  apg.y  apg_tok.ah  apglex.af  apglex.alx  apglex.ap  apgr.apg  closure.ap  genapgrules.ap  genparser.ap  genrules.ap  gensets.ap  lalr.ap  lextok.ah  lr0.ap  rules.ap  streamer.ap  test.ul  token.ah  ul.af  ul.ap  ul.apg  ul_tok.ah  ulex.af  ulex.alx  ulex.ap  ulmain  ulmain.ap
April/Apg/CVS/: Entries  Repository
April/Apg/Doc/: .cvsignore  Makefile.am  apg.texi  grammar.texi  intro.texi  rules.texi  stamp-vti  theory.texi  ul.texi  using.texi
April/Compiler/: Makefile.am  assem.c  cell.c  chkexp.c  chkptn.c  chkstmt.c  chktheta.c  compList.c  compchoice.c  compdebug.c  compexp.c  comphash.c  compile.c  compptn.c  compstmt.c  comptest.c  comptheta.c  comptype.c  depends.c  dict.c  display.c  dispsig.c  errors.c  escapes.c  filename.c  foldexp.c  gencode.c  generalize.c  grammar.c  grammar.y  heap.c  macro.c  main.c  makesig.c  operator.c  real.c  stack.c  structure.c  symbols.c  token.c  (+2 more)
April/Compiler/.deps/: assem.Po  cell.Po  chkexp.Po  chkptn.Po  chkstmt.Po  chktheta.Po  compList.Po  compchoice.Po  compdebug.Po  compexp.Po  comphash.Po  compile.Po  compile.Tpo  compptn.Po  compstmt.Po  comptest.Po  comptheta.Po  comptype.Po  depends.Po  dict.Po  display.Po  errors.Po  escapes.Po  filename.Po  foldexp.Po  gencode.Po  generalize.Po  grammar.Po  heap.Po  macro.Po  main.Po  makesig.Po  operator.Po  real.Po  stack.Po  structure.Po  symbols.Po  token.Po  types.Po  unify.Po
April/Compiler/CVS/: Entries  Repository
April/Compiler/Headers/: Makefile.am  app.h  assem.h  cdbgflags.h  cell.h  cellP.h  compile.h  dict.h  display.h  encode.h  filename.h  fold.h  generate.h  grammar.h  heap.h  keywords.h  macro.h  makesig.h  operators.h  server.h  stack.h  structure.h  token.h  topLevel.h  tree.h  types.h  typesP.h  unix.h  version.h  works.h
April/Dx/: Makefile.am  dx.ap  grab.ap  hello.xml  testdx.ap  xml.ap
April/Dx/CVS/: Entries  Repository
April/Engine/: .cvsignore  Makefile.am  alloca.c  apdltst.ap  args.c  arith.c  base64.c  chars.c  clock.c  code.c  coerce.c  compact.c  debug.c  decode.c  dict.c  dir.c  dltest.ap  dltest.c  encode.c  error.c  escapes.c  evaluate.c  fileio.c  generation.c  handle.c  ieee.c  labels.c  load.c  lockvar.c  log2.c  main.c  misc.c  msg.c  opaque.c  pipe.c  pipe.c.rej  process.c  read.c  remdebug.c  schedule.c  (+10 more)
April/Engine/.deps/: args.Po  arith.Po  chars.Po  clock.Po  code.Po  coerce.Po  compact.Po  debug.Po  decode.Po  dict.Po  dir.Po  dltest.Plo  encode.Po  error.Po  escapes.Po  evaluate.Po  fileio.Po  generation.Po  handle.Po  ieee.Plo  labels.Po  load.Po  main.Po  misc.Po  msg.Po  opaque.Po  pipe.Po  process.Po  read.Po  remdebug.Po  schedule.Po  setops.Po  signal.Po  socket.Po  sort.Po  string.Po  types.Po  utility.Po  verify.Po  writef.Po
April/Engine/CVS/: Entries  Repository
April/Engine/Doc/: .cvsignore  Makefile.am  compiling.texi  escapes.texi  finale.texi  gc.texi  iformats.texi  instructions.texi  introduction.texi  machine.texi  memory.texi  processes.texi  registers.texi  resources.texi  security.texi  texinfo.tex  types.texi
April/Engine/Headers/: Makefile.am  alloc.h  april.h  arith.h  astring.h  chars.h  clock.h  dbgflags.h  debug.h  dict.h  encoded.h  fileio.h  gcP.h  handle.h  labels.h  lock.h  msg.h  opaque.h  process.h  setops.h  sign.h  signals.h  stats.h  str.h  symbols.h  term.h  types.h  word.h
April/Neo/: .cvsignore  Makefile.am  abstract.ah  ap_tok.ah  aptok.af  aptok.alx  aptok.ap  aptoktest.ap  cps.ah  display.af  display.ap  foo.ap  genmacro  genmacro.ap  grtest.ap  gt.ap  macro.af  macro.ap  op_tree.ah  operators.af  operators.ap  opgrammar.af  opgrammar.ap  plustimes.ap  streamer.af  streamer.ap  tpl.ap  transform.ap
April/SCS/: Makefile.am  scomms.ap  scs.ap  scs.in  sping.ap  spinger.ap
April/Samples/: .cvsignore  Makefile.am  april_survey.tmpl  ball.ap  base.ap  baseball.ah  bench.ap  binaryTrees.aam  binaryTrees.ap  calculator.ap  client.aam  client.ap  csieve.ap  double.ap  dxtest.ap  dynamic.ap  echo.ap  fact.ap  fibonacci.ap  flt.ap  grapher.ap  hel.ap  hello.af  hello.ap  host.ap  infile.ap  inline.ap  mobile.ah  mobile.ap  mover.ah  mover.ap  mozart-client.ap  mozart-cons.ap  mozart-prod.ap  mozart-server.ap  mozart-single.ap  naive.ap  nsieve.aam  nsieve.ap  phil.ap  (+33 more)
April/Utilities/: .cvsignore  Makefile.am  apdebugger.ap  aplist  aplist.ap  apping.ap  apshell.ap  dxping.ap  syslib.ap
April/april/: .cvsignore  Makefile.am  boot.ap  files.ah  files.ap  filio.ap  scomms.aam  scomms.ap  sio.ap  stdio.ap  stest  stest.ap  x.ap  xml.ap  xtest  xtest.ap
April/include/: Makefile.am  compiler.ah  debug.ah  general.ah  ieee.af  modules.ah  msg.ah  null.ah  objects.ah  operators.ah  process.ah  scomms.af  setops.ah  sets.ah  spawn.ah  stdio.af  stdlib.ah  typechk.ah
CVS/: Entries  (+1 more)
Doc/: .cvsignore  Makefile.am  april.info  april.info-1  april.info-2  april.info-3  april.texi  april_foot.html  april_stoc.html  april_toc.html  arith.texi  communicate.texi  compiling.texi  debugging.texi  dll.texi  echo.texi  encoded.texi  environ.texi  errors.texi  expressions.texi  fmgr.eps  fmgr.fig  functions.texi  grammar.texi  invoke.texi  io.texi  lists.texi  macro.texi  macros.texi  operators.texi  patterns.texi  predicate.texi  process.texi  program.texi  resource.texi  stamp-vti  statement.texi  string.texi  syntax.texi  texinfo.tex  (+3 more)
Doc/CVS/: Entries  Repository
(+126 files in other folders)
