#
# Just install and distribute ....
include_HEADERS=compiler.ah\
	debug.ah\
	general.ah\
	modules.ah\
	msg.ah\
	null.ah\
	objects.ah\
	operators.ah\
	process.ah\
	setops.ah\
	sets.ah\
	stdlib.ah\
	stdio.af ieee.af scomms.af

scomms.af: ../SCS/scomms.af
	cp ../SCS/scomms.af .

EXTRA_DIST = spawn.ah
