# We only need to set up distribution here

noinst_HEADERS = app.h assem.h cdbgflags.h cell.h macro.h cellP.h\
	compile.h dict.h display.h encode.h filename.h fold.h generate.h\
	grammar.h heap.h keywords.h token.h makesig.h operators.h \
	server.h stack.h structure.h token.h tree.h types.h typesP.h\
	unix.h version.h works.h topLevel.h
