# We only need to set up distribution here

include_HEADERS = april.h\
        dbgflags.h\
        word.h\
        symbols.h\
        alloc.h\
        gcP.h\
        opaque.h\
        stats.h\
        dict.h\
        signals.h\
        astring.h\
	chars.h\
        str.h\
        handle.h
        
noinst_HEADERS = clock.h\
	setops.h\
	sign.h\
	term.h\
	arith.h\
	debug.h\
	msg.h\
	unix.h\
	process.h\
	sort.h\
	version.h\
	fileio.h\
	stats.h\
	types.h\
	labels.h

